change to 16x10 optimilization

--- a/2024-11-19-phd-defense/disputation-slides/index.html
+++ b/2024-11-19-phd-defense/disputation-slides/index.html
@@ -73,13 +73,13 @@
 
             <div class="content">
               <figure>
-                <img src="files/prevalence_mental_disorders_young_norway.png" style="width: 80%" />
+                <img src="files/prevalence_mental_disorders_young_norway.png" style="width: 100%" />
               </figure>
             </div>
 
             <div class="footer">
               <div class="source">
-                Bang <em>et al.</em>,
+                Data from Bang <em>et al.</em>,
                 <a href="https://www.fhi.no/he/folkehelserapporten/psykisk-helse/psykisk-helse-hos-barn-og-unge"
                   ><em>Psykiske plager og lidelser hos barn og unge</em></a
                 >, FHI.no (2024)
@@ -97,13 +97,13 @@
 
             <div class="content">
               <figure>
-                <img src="files/prevalence_mental_disorders_norway.png" style="width: 85%" />
+                <img src="files/prevalence_mental_disorders_norway.png" style="width: 100%" />
               </figure>
             </div>
 
             <div class="footer">
               <div class="source">
-                Sivertsen <em>et al.</em>,
+                Data from Sivertsen <em>et al.</em>,
                 <a href="https://doi.org/10.1016/j.lanepe.2023.100732"
                   ><em
                     >Prevalence of mental disorders among Norwegian college and university students: a population-based cross-sectional analysis</em
@@ -153,8 +153,8 @@
 
             <div class="content vcenter">
               <figure>
-                <img src="files/abdel_tweet_heritability.png" class="shadow" />
-                <figcaption>
+                <img src="files/abdel_tweet_heritability.png" class="shadow" style="width: 100%" />
+                <figcaption style="width: 97%">
                   <a href="https://x.com/dr_appie/status/1447866449113100294">Tweet</a> by <a href="https://x.com/dr_appie/">@dr_appie</a>
                 </figcaption>
               </figure>
@@ -234,7 +234,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_ukb_ica.png" class="large-image" style="width: 90%" />
+                <img src="files/methods/methods_ukb_ica.png" />
               </figure>
             </div>
           </section>
@@ -247,7 +247,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_ica.png" class="large-image" style="width: 80%" />
+                <img src="files/methods/methods_ica.png" />
               </figure>
             </div>
           </section>
@@ -260,7 +260,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_gwas_ica.png" class="large-image" style="width: 80%" />
+                <img src="files/methods/methods_gwas_ica.png" />
               </figure>
             </div>
           </section>
@@ -273,7 +273,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_ldsc_ica.png" class="large-image" style="width: 80%" />
+                <img src="files/methods/methods_ldsc_ica.png" />
               </figure>
             </div>
           </section>
@@ -286,8 +286,8 @@
               <div class="section">What we found</div>
             </div>
 
-            <figure class="large-image">
-              <img src="files/article_figures/ICxIC_figure.png" class="large-image" style="width: 75%; margin-top: -3em" />
+            <figure class="large-image" style="margin-top: -4.5em">
+              <img src="files/article_figures/ICxIC_figure.png" />
             </figure>
           </div>
         </section>
@@ -314,7 +314,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_ukb_fc.png" class="large-image" style="width: 90%" />
+                <img src="files/methods/methods_ukb_fc.png" />
               </figure>
             </div>
           </section>
@@ -328,7 +328,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_fc.png" class="large-image" style="width: 80%" />
+                <img src="files/methods/methods_fc.png" />
               </figure>
             </div>
           </section>
@@ -341,8 +341,8 @@
                 <div class="section">Brain connectivity measures</div>
               </div>
 
-              <figure class="large-image" style="margin-top: -3em">
-                <img src="files/methods/methods_fc_connectivity.png" class="large-image" style="width: 90%" />
+              <figure class="large-image" style="margin-top: -1em">
+                <img src="files/methods/methods_fc_connectivity.png" />
               </figure>
             </div>
           </section>
@@ -356,7 +356,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_gwas_fc.png" class="large-image" style="width: 80%" />
+                <img src="files/methods/methods_gwas_fc.png" />
               </figure>
 
               <div class="footer">
@@ -383,7 +383,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_pleio_fc.png" class="large-image" style="width: 80%" />
+                <img src="files/methods/methods_pleio_fc.png" />
               </figure>
 
               <div class="footer">
@@ -411,7 +411,7 @@
               </div>
 
               <figure class="large-image" style="width: 100vw; margin-left: -5vw">
-                <img src="files/art2_miami_mostest.png" class="large-image" style="width: 100%" />
+                <img src="files/art2_miami_mostest.png" />
               </figure>
             </div>
           </section>
@@ -422,9 +422,9 @@
                 <div class="section">What we found</div>
               </div>
 
-              <div class="content" style="margin-top: -1em">
-                <figure>
-                  <img src="files/pleio_manhattan_SCZ.png" style="width: 80%" />
+              <div class="content">
+                <figure style="margin-top: -1em">
+                  <img src="files/pleio_manhattan_SCZ.png" />
                 </figure>
 
                 <table style="font-size: 80%">
@@ -488,7 +488,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_art3_input.png" class="large-image" style="width: 90%" />
+                <img src="files/methods/methods_art3_input.png" />
               </figure>
             </div>
           </section>
@@ -501,7 +501,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_ica_mostest.png" class="large-image" style="width: 90%" />
+                <img src="files/methods/methods_ica_mostest.png" />
               </figure>
             </div>
           </section>
@@ -514,7 +514,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/methods/methods_art3_pleiofdr.png" class="large-image" style="width: 90%" />
+                <img src="files/methods/methods_art3_pleiofdr.png" />
               </figure>
             </div>
           </section>
@@ -530,7 +530,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/ica_mostest_manhattan.png" class="large-image" style="width: 90%" />
+                <img src="files/article_figures/ica_mostest_manhattan.png" />
               </figure>
             </div>
           </section>
@@ -543,7 +543,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/art3_pleio_manhattan_plot.png" class="large-image" style="width: 90%" />
+                <img src="files/article_figures/art3_pleio_manhattan_plot.png" />
               </figure>
             </div>
           </section>
@@ -596,7 +596,7 @@
               </div>
 
               <figure class="large-image" style="margin-top: -3em">
-                <img src="files/article_figures/ICAWeightMatrix_subst.png" class="large-image" style="width: 90%; margin-top: -0.5em" />
+                <img src="files/article_figures/ICAWeightMatrix_subst.png" />
               </figure>
             </div>
           </section>
@@ -608,7 +608,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/ICxIC_figure.png" class="large-image" style="margin-top: -2.5em" />
+                <img src="files/article_figures/ICxIC_figure.png" style="margin-top: -4em" />
               </figure>
             </div>
           </section>
@@ -621,7 +621,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/LDSC_stats_matrix.png" class="large-image" style="width: 100%" />
+                <img src="files/article_figures/LDSC_stats_matrix.png" />
               </figure>
             </div>
           </section>
@@ -637,7 +637,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/art2_fig1_a.png" class="large-image" style="width: 90%" />
+                <img src="files/article_figures/art2_fig1_a.png" />
               </figure>
             </div>
           </section>
@@ -650,7 +650,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/art2_pleio_manhattan.png" class="large-image" style="width: 100%" />
+                <img src="files/article_figures/art2_pleio_manhattan.png" />
               </figure>
             </div>
           </section>
@@ -662,8 +662,8 @@
                 <div class="section">Article 2</div>
               </div>
 
-              <figure class="large-image" style="margin-top: -2em">
-                <img src="files/article_figures/ldsc_edgexdiag.png" class="large-image" style="width: 90%" />
+              <figure class="large-image" style="margin-top: -1em">
+                <img src="files/article_figures/ldsc_edgexdiag.png" />
               </figure>
             </div>
           </section>
@@ -675,8 +675,8 @@
                 <div class="section">Article 2</div>
               </div>
 
-              <figure class="large-image" style="margin-top: -2em">
-                <img src="files/article_figures/ldsc_nodexdiag.png" class="large-image" style="width: 90%" />
+              <figure class="large-image" style="margin-top: -1em">
+                <img src="files/article_figures/ldsc_nodexdiag.png" />
               </figure>
             </div>
           </section>
@@ -692,7 +692,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/ica_mostest_manhattan.png" class="large-image" style="width: 90%" />
+                <img src="files/article_figures/ica_mostest_manhattan.png" />
               </figure>
             </div>
           </section>
@@ -705,7 +705,7 @@
               </div>
 
               <figure class="large-image">
-                <img src="files/article_figures/art3_pleio_manhattan_plot.png" class="large-image" style="width: 90%" />
+                <img src="files/article_figures/art3_pleio_manhattan_plot.png" />
               </figure>
             </div>
           </section>
