--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -44,29 +44,6 @@
         </section>
 
         <!-- SLIDE -->
-        <section class="quote color--dark-accent2" data-state="hide-controls">
-          <div class="grid-wrapper">
-            <blockquote>
-              <em
-                >"About half of Americans will meet the criteria for a DSM-IV disorder sometime in their life, with first onset usually in childhood
-                or adolescence"</em
-              >
-              <hr />
-              <cite>Kessler <em>et al.</em> (2005)</cite>
-            </blockquote>
-
-            <div class="footer">
-              <div class="source">
-                Kessler <em>et al.</em>,
-                <a href="https://doi.org/10.1001/archpsyc.62.6.593"
-                  ><em>Lifetime Prevalence and Age-of-Onset Distributions of DSM-IV Disorders in the National Comorbidity Survey Replication</em></a
-                >, JAMA Psychiatry (2005)
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- SLIDE -->
         <section>
           <div class="grid-wrapper">
             <div class="header">
@@ -74,8 +51,8 @@
             </div>
 
             <div class="content">
-              <figure style="margin-top: -0.5em">
-                <img src="files/age_of_onset_disorders.png" style="width: 80%" />
+              <figure class="large-image">
+                <img src="files/age_of_onset_disorders.png" />
               </figure>
             </div>
 
@@ -98,9 +75,9 @@
             </div>
 
             <div class="content">
-              <figure>
-                <img src="files/chart_brain_lifespan.png" style="width: 58%; margin-top: -2em" />
-                <figcaption style="margin-right: 15em">
+              <figure class="large-image">
+                <img src="files/chart_brain_lifespan.png" style="width: 64%; margin-top: -2em" />
+                <figcaption style="margin-right: 13em">
                   Bethlehem <em>et al.</em>, <a href="https://doi.org/10.1038/s41586-022-04554-y"><em>Brain charts for the human lifespan</em></a
                   >, Nature (2022)
                 </figcaption>
@@ -117,8 +94,8 @@
             </div>
 
             <div class="content">
-              <figure>
-                <img src="files/imaging_age_distribution.png" style="width: 90%" />
+              <figure class="large-image" style="margin-top: -1em">
+                <img src="files/imaging_age_distribution.png" style="width: 94%" />
               </figure>
             </div>
 
@@ -152,28 +129,28 @@
                 <li class="fragment" data-fragment-index="1">
                   <h3>T1</h3>
                   <p>CSF is dark, grey matter appears bright</p>
-                  <img src="./files/imaging_modalities/t1.png" height="450" style="position: absolute; right: 6vw; top: 15vh" />
+                  <img src="./files/imaging_modalities/t1.png" height="475" style="position: absolute; right: 6vw; top: 15vh" />
                 </li>
                 <li class="fragment">
                   <h3>T2</h3>
                   <p>CSF appears white, white matter darker shade of grey</p>
-                  <img src="./files/imaging_modalities/t2.png" height="450" style="position: absolute; right: 4vw; top: 32vh" />
+                  <img src="./files/imaging_modalities/t2.png" height="475" style="position: absolute; right: 4vw; top: 32vh" />
                 </li>
                 <li class="fragment">
                   <h3>DWI/DTI</h3>
                   <p>Visualizes white matter tracts, areas with higher diffusion are brighter</p>
-                  <img src="./files/imaging_modalities/dti_fa.png" height="450" style="position: absolute; right: 10vw; top: 46vh" />
-                  <img src="./files/imaging_modalities/dti_md.png" height="450" style="position: absolute; right: -15.9vw; top: 25.2vh" />
+                  <img src="./files/imaging_modalities/dti_md.png" height="475" style="position: absolute; right: -17.3vw; top: 26vh" />
+                  <img src="./files/imaging_modalities/dti_fa.png" height="475" style="position: absolute; right: 10vw; top: 45.75vh" />
                 </li>
                 <li class="fragment">
                   <h3>fMRI</h3>
                   <p>Areas with high activity (i.e. oxygen perfusion) are brighter</p>
-                  <img src="./files/imaging_modalities/fmri.png" height="450" style="position: absolute; right: 8vw; top: 44vh" />
+                  <img src="./files/imaging_modalities/fmri.png" height="475" style="position: absolute; right: 7vw; top: 44vh" />
                 </li>
                 <li class="fragment">
                   <h3>Others</h3>
                   <p>e.g. PET, EEG, EMG</p>
-                  <img src="./files/imaging_modalities/pet.png" height="450" style="position: absolute; right: 6vw; top: 56vh" />
+                  <img src="./files/imaging_modalities/pet.png" height="475" style="position: absolute; right: 6vw; top: 56vh" />
                 </li>
               </ul>
             </div>
@@ -460,8 +437,8 @@
             </div>
 
             <div class="content">
-              <figure>
-                <img class="plain" src="files/danish_twin_example.png" style="width: 100vw; margin-top: -1em" />
+              <figure class="large-image" style="width: 110%; margin-left: -2em; margin-top: -1em">
+                <img class="plain" src="files/danish_twin_example.png" />
               </figure>
             </div>
 
@@ -484,9 +461,9 @@
             </div>
 
             <div class="content">
-              <figure>
-                <img class="plain" src="files/heritable_traits_figure.png" style="width: 90%; margin-top: -1em" />
-                <figcaption style="margin-right: 3.5em">
+              <figure class="large-image">
+                <img class="plain" src="files/heritable_traits_figure.png" />
+                <figcaption style="margin-right: 2em">
                   Boomsma <em>et al.</em>, <a href="https://doi.org/10.1038/nrg932"><em>Classical twin studies and beyond</em></a
                   >, Nat Rev Genet (2002)
                 </figcaption>
@@ -554,8 +531,8 @@
               </div>
 
               <div class="column fragment" data-fragment-index="2">
-                <figure>
-                  <img class="plain" src="files/heritability_example.jpg" style="width: 100%" />
+                <figure class="large-image">
+                  <img class="plain" src="files/heritability_example.jpg" />
                   <figcaption style="width: 95%">
                     Gray & Thompson,
                     <a href="https://doi.org/10.1038/nrn1405" style="color: initial"><em>Neurobiology of intelligence: science and ethics</em></a
@@ -575,8 +552,8 @@
             </div>
 
             <div class="content">
-              <figure style="margin-top: 0">
-                <img class="plain" src="files/frequency_vs_penetrance_illustration.png" style="width: 100vw" />
+              <figure class="large-image" style="width: 110%; margin-left: -2em">
+                <img class="plain" src="files/frequency_vs_penetrance_illustration.png" />
               </figure>
             </div>
 
@@ -630,13 +607,13 @@
               <ul class="no-bullets">
                 <li>Calculates the genetic predisposition for a trait</li>
               </ul>
-              <figure class="fragment" data-fragment-index="1" style="margin-top: 1em">
-                <img src="files/prs_illustration.png" width="100vw" />
+              <figure class="large-image fragment" data-fragment-index="1" style="margin-top: 1em">
+                <img src="files/prs_illustration.png" />
               </figure>
               <div
                 class="fragment fade-out"
                 data-fragment-index="2"
-                style="position: absolute; width: 100vw; top: 75vh; left: 0; height: 10vh; background-color: #eeedef"
+                style="position: absolute; width: 100vw; top: 77vh; left: 0; height: 10vh; background-color: #eeedef"
               ></div>
             </div>
 
@@ -845,7 +822,7 @@
                   data-fragment-index="1"
                   src="files/imggen_tissink_figure.png"
                   height="850"
-                  style="position: absolute; top: 12vh; right: 2vw"
+                  style="position: absolute; top: 17vh; right: 2vw"
                 />
                 <img
                   class="plain fragment"
@@ -953,9 +930,9 @@
             </div>
 
             <div class="content">
-              <figure>
-                <img class="plain" src="files/cartoon_functional_experiments.png" style="width: 90%" />
-                <figcaption style="margin-right: 4em">Illustration by <a href="https://www.infocomics.nl">Tom van Dun</a></figcaption>
+              <figure class="large-image">
+                <img class="plain" src="files/cartoon_functional_experiments.png" />
+                <figcaption style="margin-right: 2em">Illustration by <a href="https://www.infocomics.nl">Tom van Dun</a></figcaption>
               </figure>
             </div>
           </div>
@@ -1013,50 +990,6 @@
         <section class="screensaver" data-state="hide-controls hide-progress">
           <div class="card">
             <h1>Thank you!</h1>
-          </div>
-        </section>
-
-        <!-- SLIDE -->
-        <section class="subsection" data-state="hide-controls hide-progress" style="background-color: darkblue">
-          <div style="height: 100%; margin: 1em; font-family: 'Comic Sans MS'; color: yellow">
-            <span class="vcenter" style="margin: auto; font-size: 1.8rem">Questions?</span>
-            <ul class="no-bullets" style="margin-top: 0.5em">
-              <li>- Anything I can/should elaborate on?</li>
-              <li>- Should I talk more about the genetics part or is it okay as it is?</li>
-              <li>
-                - Some parts may be overly simplified or assume too much knowledge from the viewers especially since the target audience according to
-                the brief was univrsity students and educated public
-              </li>
-              <li>* Should I speak faster or slower or is okay? I have 45 minutes with<br />some time for questions and answers afterwards</li>
-              <li>*Were the slides readable? Did I move through them too fast? I could <br />probably squish together some slides</li>
-              <li>
-                -How about the transitions? Are they dizzing? Before I used both<br />vertical and horizontal transitions, but in the wrong context
-                they can<br />perhaps be confusing
-              </li>
-              <li>
-                * I'll be in the office some times this week, I hope it's okay to drop<br />some people a question and ask about neurodevelopmental
-                stuff
-              </li>
-              <li>-Thanks for having me, it's nice to be back in B48</li>
-              <li>
-                - Any way to avoid difficult questions during the defense by perhaps answering<br />them in the disputation? Any "strategies" others
-                have used during their defenses ?
-              </li>
-            </ul>
-            <img
-              src="https://www.explainxkcd.com/wiki/images/1/12/conference_question.png"
-              width="400"
-              style="position: absolute; right: 0.1em; bottom: 0.5em"
-            />
-          </div>
-        </section>
-
-        <!-- SLIDE -->
-        <section class="subsection" data-state="hide-controls hide-progress" style="background-color: #8ace00">
-          <div class="vcenter" style="display: flex; height: 100%">
-            <span class="vcenter brat" style="margin: auto; font-size: 2rem"
-              >feedback<br />and it's<br />a roast but<br />also still<br />feedback</span
-            >
           </div>
         </section>
 
