--- a/2024-11-19-phd-defense/disputation-slides/index.html
+++ b/2024-11-19-phd-defense/disputation-slides/index.html
@@ -134,7 +134,8 @@
                 <ul>
                   <li>Societal factors</li>
                   <li class="accent b">Genetics</li>
-                  <li class="accent b">Biology</li>
+                  <li class="accent b">Neuroscientific features</li>
+                  <li>Cardiovascular measures</li>
                   <li>Environmental reasons</li>
                   <li>Social factors</li>
                   <li>...</li>
@@ -286,8 +287,8 @@
               <div class="section">What we found</div>
             </div>
 
-            <figure class="large-image" style="margin-top: -4.5em">
-              <img src="files/article_figures/ICxIC_figure.png" />
+            <figure class="large-image" style="width: 120%; margin-left: -3em; margin-top: -2em">
+              <img src="files/art1_icxic_annotated.png" />
             </figure>
           </div>
         </section>
@@ -410,9 +411,13 @@
                 <div class="section">What we found</div>
               </div>
 
-              <figure class="large-image" style="width: 100vw; margin-left: -5vw">
-                <img src="files/art2_miami_mostest.png" />
-              </figure>
+              <div class="content">
+                <h4>Comparison between multivariate GWAS and minimum <em>p</em> value across univariate GWAS</h4>
+
+                <figure class="large-image" style="width: 100vw; margin-left: -7vw">
+                  <img src="files/art2_miami_mostest.png" />
+                </figure>
+              </div>
             </div>
           </section>
           <!-- SUBSLIDE -->
@@ -529,9 +534,13 @@
                 <div class="section">What we found</div>
               </div>
 
-              <figure class="large-image">
-                <img src="files/article_figures/ica_mostest_manhattan.png" />
-              </figure>
+              <div class="content">
+                <h4>GWAS for all independent components together</h4>
+
+                <figure class="large-image" style="margin-top: -1em">
+                  <img src="files/article_figures/ica_mostest_manhattan.png" />
+                </figure>
+              </div>
             </div>
           </section>
 
@@ -542,9 +551,13 @@
                 <div class="section">What we found</div>
               </div>
 
-              <figure class="large-image">
-                <img src="files/article_figures/art3_pleio_manhattan_plot.png" />
-              </figure>
+              <div class="content">
+                <h4>Shared genetic architecture between the imaging features and mental health measure</h4>
+
+                <figure class="large-image">
+                  <img src="files/article_figures/art3_pleio_manhattan_plot.png" />
+                </figure>
+              </div>
             </div>
           </section>
         </section>
