--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -203,12 +203,12 @@
                 <li class="fragment">
                   <h3>fMRI</h3>
                   <p>Areas with high activity (i.e. oxygen perfusion) are brighter</p>
-                  <img src="./files/imaging_modalities/fmri.png" height="475" style="position: absolute; right: 7vw; top: 44vh" />
+                  <img src="./files/imaging_modalities/fmri.png" height="475" style="position: absolute; right: 4vw; top: 44vh" />
                 </li>
                 <li class="fragment">
                   <h3>Others</h3>
                   <p>e.g. PET, EEG, EMG</p>
-                  <img src="./files/imaging_modalities/pet.png" height="475" style="position: absolute; right: 6vw; top: 56vh" />
+                  <img src="./files/imaging_modalities/pet.png" height="475" style="position: absolute; right: 3vw; top: 53vh" />
                 </li>
               </ul>
             </div>
@@ -512,6 +512,16 @@
                 data-fragment-index="1"
                 style="position: absolute; width: 100vw; top: 55vh; left: 0; height: 35vh; background-color: #eeedef"
               ></div>
+              <div
+                class="fragment fade-out"
+                data-fragment-index="2"
+                style="position: absolute; width: 72vw; top: 69vh; right: 0; height: 20vh; background-color: #eeedef"
+              ></div>
+              <div
+                class="fragment fade-out"
+                data-fragment-index="2"
+                style="position: absolute; width: 50vw; top: 62vh; right: 0; height: 18vh; background-color: #eeedef"
+              ></div>
             </div>
 
             <div class="footer" style="visibility: hidden">
@@ -669,7 +679,7 @@
                 <li>
                   <h3>GWAS results</h3>
                   <p>Heritability (h<sup>2</sup><sub>SNP</sub>) for ASD = 0.118, ADHD = 0.22</p>
-                  <p>PGS a solid predictor for neurodevelopental disorders</p>
+                  <p>PGS a solid predictor for neurodevelopmental disorders</p>
                 </li>
                 <li class="fragment" data-fragment-index="2" style="margin-top: 2em">
                   <h3>Other GWAS results</h3>
@@ -803,6 +813,52 @@
         <section>
           <div class="grid-wrapper">
             <div class="header">
+              <div class="section">Challenges</div>
+            </div>
+
+            <div class="content">
+              <ul class="no-bullets wide">
+                <li>
+                  <h3>Same as previously mentioned</h3>
+                  <p>Lack of standard protocol, inclusion/exclusion criteria</p>
+                </li>
+                <li class="fragment" data-fragment-index="1">
+                  <h3>Lack of datasets including both imaging and genetics</h3>
+                  <p>Requires resources and follow-up routines</p>
+                </li>
+                <li class="fragment" data-fragment-index="2">
+                  <h3>Lack of datasets from<br />underresearched groups</h3>
+                  <p>e.g. Africa has &lt;1 MRI scanner per million inhabitants</p>
+                  <img class="plain" src="files/mri_scanners_map.png" height="400" style="position: absolute; top: 56vh; right: 2vw" />
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer">
+              <div class="source">
+                <div class="fragment" data-fragment-index="2">
+                  <p>
+                    Anazodo <em>et al.</em>,
+                    <a href="https://doi.org/10.1038/s41467-020-17368-1"
+                      ><em>A framework for advancing sustainable magnetic resonance imaging access in Africa</em></a
+                    >, NMR Biomed (2023)
+                  </p>
+                  <p>
+                    Hricak <em>et al.</em>,
+                    <a href="https://doi.org/10.1016/S1470-2045(20)30751-8"
+                      ><em>Medical imaging and nuclear medicine: a Lancet Oncology Commission</em></a
+                    >, Lancet Oncol (2021)
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- SLIDE -->
+        <section>
+          <div class="grid-wrapper">
+            <div class="header">
               <div class="section">"Combination" approaches</div>
             </div>
 
@@ -824,7 +880,7 @@
                   class="plain fragment fade-out"
                   data-fragment-index="1"
                   src="files/img_gen_asd_flow.png"
-                  height="700"
+                  height="680"
                   style="position: absolute; right: 2vw"
                 />
                 <img
