--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -440,6 +440,7 @@
                   <li class="fragment" data-fragment-index="1">
                     Decreased connectivity in areas associated with language processing in low-verbal ASD patients
                   </li>
+                  <li class="fragment" data-fragment-index="2">Alterations in connectivity associated with clinical symptom scores</li>
                 </ul>
               </div>
 
@@ -452,11 +453,18 @@
                   style="position: absolute; right: 2vw; top: 20vh"
                 />
                 <img
-                  class="fragment"
+                  class="fragment fade-in-then-out"
                   data-fragment-index="1"
                   src="files/fmri_asd_changes.png"
                   height="350"
-                  style="position: absolute; right: 1vw; top: 50vh"
+                  style="position: absolute; right: 1vw; top: 40vh"
+                />
+                <img
+                  class="fragment"
+                  data-fragment-index="2"
+                  src="files/fmri_cca_correlations.png"
+                  height="900"
+                  style="position: absolute; right: 4vw; top: 15vh"
                 />
               </div>
             </div>
