add rough checkpoints

--- a/2024-11-19-phd-defense/disputation-slides/index.html
+++ b/2024-11-19-phd-defense/disputation-slides/index.html
@@ -223,6 +223,7 @@
               <em>Translational Psychiatry</em> (2021)
             </div>
           </div>
+          <aside class="notes">Checkpoint: 8 minutes</aside>
         </section>
 
         <!-- SLIDE -->
@@ -302,6 +303,7 @@
               <em>Nature Mental Health</em> (2024)
             </div>
           </div>
+          <aside class="notes">Checkpoint: 12 minutes</aside>
         </section>
 
         <!-- SLIDE -->
@@ -481,6 +483,7 @@
               <em>BMC Psychiatry</em> (2023)
             </div>
           </div>
+          <aside class="notes">Checkpoint: 16 minutes</aside>
         </section>
 
         <!-- SLIDE -->
@@ -582,6 +585,7 @@
               </div>
             </div>
           </div>
+          <aside class="notes">Checkpoint: 19 minutes</aside>
         </section>
 
         <!-- SLIDE -->
