--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -190,6 +190,7 @@
             <h1>Brain imaging</h1>
             <div class="description em">What imaging techniques can tell us about neurodevelopment</div>
           </div>
+          <aside class="notes">Checkpoint: 10 minutes</aside>
         </section>
 
         <!-- SLIDE -->
@@ -494,6 +495,7 @@
             <h1>Genetics</h1>
             <div class="description em">What genetic analysis can tell us about neurodevelopment</div>
           </div>
+          <aside class="notes">Checkpoint: 20 minutes</aside>
         </section>
 
         <!-- SLIDE -->
@@ -853,6 +855,7 @@
             <h1>Imaging-genetics</h1>
             <div class="description em">1 + 1 = 3</div>
           </div>
+          <aside class="notes">Checkpoint: 30 minutes</aside>
         </section>
 
         <!-- SLIDE -->
@@ -1177,6 +1180,7 @@
             <h1>Conclusions</h1>
             <div class="description em">How does imaging-genetics help us understand principles of neurodevelopment?</div>
           </div>
+          <aside class="notes">Checkpoint: 40 minutes</aside>
         </section>
 
         <!-- SLIDE -->
