add section slide

--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -84,6 +84,14 @@
         </section>
 
         <!-- SLIDE -->
+        <section class="subsection color--light-accent3" data-state="hide-controls">
+          <div class="grid-wrapper">
+            <h1>Neurodevelopment</h1>
+            <div class="description em">What is neurodevelopment and why is it relevant</div>
+          </div>
+        </section>
+
+        <!-- SLIDE -->
         <section>
           <div class="grid-wrapper">
             <div class="header">
