change to callout

--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -1199,16 +1199,16 @@
             </div>
 
             <div class="content vcenter">
-              <ul class="no-bullets wide">
-                <li>
-                  <h3>Genetics and imaging are both relevant for neurodevelopmental research</h3>
-                  <p>Both in healthy state and in psychopathology</p>
-                </li>
-                <li class="fragment" data-fragment-index="1">
-                  <h3>Leveraging multiple modalities can improve our understanding of the mechanisms underlying neurodevelopment</h3>
-                  <p>Aids in the discovery of genetic variants and helps map the genetic findings to imaging features</p>
-                </li>
-              </ul>
+              <div class="callout fragment fade-up" style="width: 67vw">
+                <div class="callout-header">Key takeaway</div>
+                <div class="callout-container" style="font-size: 1.5em">Genetics and imaging are both relevant for neurodevelopmental research</div>
+              </div>
+              <div class="callout fragment fade-up" style="width: 67vw">
+                <div class="callout-header">Key takeaway</div>
+                <div class="callout-container" style="font-size: 1.5em">
+                  Leveraging multiple modalities can improve our understanding of the mechanisms underlying neurodevelopment
+                </div>
+              </div>
             </div>
           </div>
         </section>
